# canis-she

./: README.md
src/: hsm.h  keydist.py  nvram.h  she.h
src/swshe/: CMakeLists.txt  cmac.c  cmacdyn.c  dececb.c  encecb.c  exportramkey.c  extseed.c  getid.c  init.c  kdf.c  loadkey.c  platform.c  reset.c  rng.c  swshe.h
src/tests/: CMakeLists.txt  nvram.c  test.h  vectors.c  vectors2.c
